# dnsmonitor

./: Cargo.toml  Dockerfile  README.md  entrypoint.sh
src/: lib.rs  main.rs
