[package]
name = "dnsmonitor"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = "debuginfo"
debug = true   # flamegraph

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ctrlc = { version = "3", features=["termination"]}
